--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "src/app.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "sucrase": "^3.20.3"
+    "nodemon": "^2.0.20",
+    "sucrase": "^3.29.0"
   }
 }
